refactor(test): MySqlContainerConfig 수정.